trying to make things generic, and work!

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -24,7 +24,7 @@
                 </p>
             </div>
         </a>
-        <a class="card cy-dashboard">
+        <a class="card cy-dashboard" href="chargetypes">
             <div class="card-body">
                 <div class="cy-card-image">
                     <i class="card-img-top fas fa-money-bill fa-5x fa-fw"></i>
@@ -46,7 +46,7 @@
                 </p>
             </div>
         </a>
-        <a class="card cy-dashboard">
+        <a class="card cy-dashboard" href="eventtypes">
             <div class="card-body">
                 <div class="cy-card-image">
                     <i class="card-img-top fas fa-toolbox fa-5x fa-fw"></i>
@@ -57,7 +57,7 @@
                 </p>
             </div>
         </a>
-        <a class="card cy-dashboard">
+        <a class="card cy-dashboard" href="locations">
             <div class="card-body">
                 <div class="cy-card-image">
                     <i class="card-img-top fas fa-compass fa-5x fa-fw"></i>
@@ -68,7 +68,7 @@
                 </p>
             </div>
         </a>
-        <a class="card cy-dashboard">
+        <a class="card cy-dashboard" href="partnerships">
             <div class="card-body">
                 <div class="cy-card-image">
                     <i class="card-img-top fas fa-handshake fa-5x fa-fw"></i>
