--- a/app/templates/event_role/list.html
+++ b/app/templates/event_role/list.html
@@ -1,37 +1,3 @@
-{% extends "master.html" %}
-{% block content %}
-<div class="d-flex justify-content-between align-items-center">
-    <h1>Event Roles</h1>
-    <div>
-        <a href="/eventroles/create" class="btn btn-primary">Create New</a>
-    </div>
-</div>
-<div>
-    <table class="table table-hover">
-        <thead>
-            <th scope="col">#</th>
-            <th scope="col">Name</th>
-            <th scope="col">Description</th>
-            <th scope="col"></th>
-        </thead>
-        <tbody>
-            {% if roles %}
-                {% for role in roles %}
-                <tr>
-                    <th scope="row">{{role.id}}</th>
-                    <td>{{role.name}}</td>
-                    <td>{{role.description if role.description else ""}}</td>
-                    <td class="text-right">
-                        <a href="/eventroles/{{role.id}}" class="btn btn-primary"><i class="fas fa-pencil-alt"></i></a>
-                    </td>
-                </tr>
-                {% endfor %}
-            {% else %}
-                <tr>
-                    <td colspan="4" class="text-center">No Event Roles Found</td>
-                </tr>
-            {% endif %}
-        </tbody>
-    </table>
-</div>
-{% endblock %}
+{% extends "list_master.html" %}
+{% block title %}Event Roles{% endblock %}
+{% block controller %}eventroles{% endblock %}
