--- a/app/templates/event_role/view.html
+++ b/app/templates/event_role/view.html
@@ -1,37 +1,6 @@
-{% extends "master.html" %}
-{% block content %}
-<div class="d-flex justify-content-between align-items-center">
-        <h1>Event Role - {{name if id else "Create"}}{{(" <span class='cy-inactive'>(inactive)</span>")|safe if status else ""|safe}}</h1>
-        <div>
-            <a href="/eventroles" class="btn btn-info">All Event Roles</a>
-        </div>
-    </div>
-<div>
-    <form method="POST">
-        <div class="row">
-            <div class="col-sm form-group">
-                <label for="name">Name</label>
-                <input class="form-control" type="text" name="name" id="name" value="{{name}}"/>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm form-group">
-                <label for="description">Description</label>
-                <input class="form-control" type="text" name="description" id="description" value="{{description if description else ""}}"/>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm form-group">
-                {% if status %}
-                <a href="/eventroles/{{id}}/restore" class="btn btn-secondary"><i class="fas fa-recycle"></i> Restore</a>
-                {% else %}
-                <button type="submit" class="btn btn-primary"><i class="fas fa-save"></i> {{"Save" if id else "Create"}}</button>
-                {% if id %}
-                <a href="/eventroles/{{id}}/delete" class="btn btn-danger"><i class="fas fa-trash-alt"></i> Delete</a>
-                {% endif %}
-                {% endif %}
-            </div>
-        </div>
-    </form>
-</div>
+{% extends "view_master.html" %}
+{% block title %}Event Roles{% endblock %}
+{% block controller %}eventroles{% endblock %}
+{% block fields %}
+    {{super()}}
 {% endblock %}
