--- a/app/templates/master.html
+++ b/app/templates/master.html
@@ -1,3 +1,12 @@
+{% macro text_input_row(label, name, value) %}
+<div class="row">
+    <div class="col-sm form-group">
+        <label for="{{name}}">{{label}}</label>
+        <input class="form-control" type="text" name="{{name}}" id="{{name}}" value="{{value}}"/>
+    </div>
+</div>
+{% endmacro %}
+
 <html>
     <head>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
