--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -2,6 +2,17 @@
 {% block content %}
 <div class="container">
     <div class="d-flex flex-wrap justify-content-center">
+        <a class="card cy-dashboard" href="events">
+            <div class="card-body">
+                <div class="cy-card-image">
+                    <i class="card-img-top fas fa-bicycle fa-5x fa-fw"></i>
+                </div>
+                <h5 class="card-title" style="text-align: center">Events</h5>
+                <p class="card-text">
+                    View, Edit and Create Events
+                </p>
+            </div>
+        </a>
         <a class="card cy-dashboard">
             <div class="card-body">
                 <div class="cy-card-image">
